--- a/Radiosu/MainStoryboard.storyboard
+++ b/Radiosu/MainStoryboard.storyboard
@@ -1,5 +1,5 @@
 <?xml version="1.0" encoding="UTF-8" standalone="no"?>
-<document type="com.apple.InterfaceBuilder3.CocoaTouch.Storyboard.XIB" version="2.0" toolsVersion="3084" systemVersion="12E55" targetRuntime="iOS.CocoaTouch" propertyAccessControl="none" useAutolayout="YES" initialViewController="ilx-PK-F7i">
+<document type="com.apple.InterfaceBuilder3.CocoaTouch.Storyboard.XIB" version="2.0" toolsVersion="3084" systemVersion="12E55" targetRuntime="iOS.CocoaTouch" propertyAccessControl="none" initialViewController="ilx-PK-F7i">
     <dependencies>
         <plugIn identifier="com.apple.InterfaceBuilder.IBCocoaTouchPlugin" version="2083"/>
     </dependencies>
@@ -20,16 +20,11 @@
                                     <rect key="frame" x="0.0" y="0.0" width="300" height="66"/>
                                     <autoresizingMask key="autoresizingMask"/>
                                     <subviews>
-                                        <imageView userInteractionEnabled="NO" contentMode="scaleToFill" translatesAutoresizingMaskIntoConstraints="NO" id="4VY-Be-e3W">
-                                            <constraints>
-                                                <constraint firstAttribute="height" constant="50" id="F53-DV-eb7"/>
-                                                <constraint firstAttribute="width" constant="50" id="Ye8-Zd-wNX"/>
-                                            </constraints>
+                                        <imageView userInteractionEnabled="NO" contentMode="scaleToFill" id="4VY-Be-e3W">
+                                            <rect key="frame" x="20" y="9" width="50" height="50"/>
                                         </imageView>
-                                        <label opaque="NO" clipsSubviews="YES" userInteractionEnabled="NO" contentMode="left" text="Label" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="AIK-Ri-tFR">
-                                            <constraints>
-                                                <constraint firstAttribute="width" constant="202" id="Ynf-rL-zoF"/>
-                                            </constraints>
+                                        <label opaque="NO" clipsSubviews="YES" userInteractionEnabled="NO" contentMode="left" text="Label" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" id="AIK-Ri-tFR">
+                                            <rect key="frame" x="78" y="9" width="202" height="50"/>
                                             <fontDescription key="fontDescription" type="boldSystem" pointSize="17"/>
                                             <color key="textColor" cocoaTouchSystemColor="darkTextColor"/>
                                             <color key="highlightedColor" white="1" alpha="1" colorSpace="calibratedWhite"/>
@@ -37,13 +32,6 @@
                                     </subviews>
                                     <color key="backgroundColor" white="0.0" alpha="0.0" colorSpace="calibratedWhite"/>
                                 </view>
-                                <constraints>
-                                    <constraint firstItem="AIK-Ri-tFR" firstAttribute="bottom" secondItem="4VY-Be-e3W" secondAttribute="bottom" type="default" id="AIq-dw-FZ6"/>
-                                    <constraint firstItem="AIK-Ri-tFR" firstAttribute="top" secondItem="4VY-Be-e3W" secondAttribute="top" type="default" id="XgL-YF-jil"/>
-                                    <constraint firstItem="AIK-Ri-tFR" firstAttribute="leading" secondItem="4VY-Be-e3W" secondAttribute="trailing" constant="8" symbolic="YES" type="default" id="jxP-eE-Fny"/>
-                                    <constraint firstItem="AIK-Ri-tFR" firstAttribute="centerY" secondItem="xgB-Nl-Fwt" secondAttribute="centerY" type="default" id="lnI-I5-9Bt"/>
-                                    <constraint firstItem="4VY-Be-e3W" firstAttribute="leading" secondItem="xgB-Nl-Fwt" secondAttribute="leading" constant="20" type="default" id="ost-G1-4s5"/>
-                                </constraints>
                                 <connections>
                                     <outlet property="iconView" destination="4VY-Be-e3W" id="Wqr-K7-IPH"/>
                                     <outlet property="nameLabel" destination="AIK-Ri-tFR" id="nxX-SF-vek"/>
@@ -69,11 +57,17 @@
                         <rect key="frame" x="0.0" y="20" width="320" height="548"/>
                         <autoresizingMask key="autoresizingMask" flexibleMaxX="YES" flexibleMaxY="YES"/>
                         <subviews>
-                            <tableView clipsSubviews="YES" contentMode="scaleToFill" alwaysBounceVertical="YES" dataMode="prototypes" style="plain" rowHeight="67" sectionHeaderHeight="22" sectionFooterHeight="22" translatesAutoresizingMaskIntoConstraints="NO" id="gEg-SG-ozY">
+                            <navigationBar contentMode="scaleToFill" id="xIC-Dj-Ou8">
+                                <rect key="frame" x="0.0" y="0.0" width="320" height="44"/>
+                                <autoresizingMask key="autoresizingMask" flexibleMaxY="YES"/>
+                                <items>
+                                    <navigationItem title="Радиосу" id="ati-Qq-37O"/>
+                                </items>
+                            </navigationBar>
+                            <tableView clipsSubviews="YES" contentMode="scaleToFill" alwaysBounceVertical="YES" dataMode="prototypes" style="plain" rowHeight="67" sectionHeaderHeight="22" sectionFooterHeight="22" id="gEg-SG-ozY">
+                                <rect key="frame" x="0.0" y="112" width="320" height="436"/>
+                                <autoresizingMask key="autoresizingMask" flexibleMaxY="YES"/>
                                 <color key="backgroundColor" white="1" alpha="1" colorSpace="calibratedWhite"/>
-                                <constraints>
-                                    <constraint firstAttribute="height" constant="436" id="TAc-8Y-9PM"/>
-                                </constraints>
                                 <prototypes>
                                     <tableViewCell contentMode="scaleToFill" selectionStyle="blue" accessoryType="disclosureIndicator" hidesAccessoryWhenEditing="NO" indentationLevel="1" indentationWidth="0.0" reuseIdentifier="RadioCell" rowHeight="67" id="cU4-5d-v97" customClass="RadioCell">
                                         <rect key="frame" x="0.0" y="22" width="320" height="67"/>
@@ -82,16 +76,11 @@
                                             <rect key="frame" x="0.0" y="0.0" width="300" height="66"/>
                                             <autoresizingMask key="autoresizingMask"/>
                                             <subviews>
-                                                <imageView userInteractionEnabled="NO" contentMode="scaleToFill" translatesAutoresizingMaskIntoConstraints="NO" id="DJD-In-pWu">
-                                                    <constraints>
-                                                        <constraint firstAttribute="height" constant="50" id="QGK-sp-dXi"/>
-                                                        <constraint firstAttribute="width" constant="50" id="UH0-eI-ZGn"/>
-                                                    </constraints>
+                                                <imageView userInteractionEnabled="NO" contentMode="scaleToFill" id="DJD-In-pWu">
+                                                    <rect key="frame" x="20" y="9" width="50" height="50"/>
                                                 </imageView>
-                                                <label opaque="NO" clipsSubviews="YES" userInteractionEnabled="NO" contentMode="left" text="Label" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="rCE-cb-0q8">
-                                                    <constraints>
-                                                        <constraint firstAttribute="width" constant="202" id="f5h-cb-rfu"/>
-                                                    </constraints>
+                                                <label opaque="NO" clipsSubviews="YES" userInteractionEnabled="NO" contentMode="left" text="Label" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" id="rCE-cb-0q8">
+                                                    <rect key="frame" x="78" y="9" width="202" height="50"/>
                                                     <fontDescription key="fontDescription" type="boldSystem" pointSize="17"/>
                                                     <color key="textColor" cocoaTouchSystemColor="darkTextColor"/>
                                                     <color key="highlightedColor" white="1" alpha="1" colorSpace="calibratedWhite"/>
@@ -99,13 +88,6 @@
                                             </subviews>
                                             <color key="backgroundColor" white="0.0" alpha="0.0" colorSpace="calibratedWhite"/>
                                         </view>
-                                        <constraints>
-                                            <constraint firstItem="DJD-In-pWu" firstAttribute="leading" secondItem="cU4-5d-v97" secondAttribute="leading" constant="20" type="default" id="HAl-3f-pOf"/>
-                                            <constraint firstItem="rCE-cb-0q8" firstAttribute="leading" secondItem="DJD-In-pWu" secondAttribute="trailing" constant="8" symbolic="YES" type="default" id="fYI-0Q-6Fg"/>
-                                            <constraint firstItem="rCE-cb-0q8" firstAttribute="centerY" secondItem="cU4-5d-v97" secondAttribute="centerY" type="default" id="nDX-ZN-jpl"/>
-                                            <constraint firstItem="rCE-cb-0q8" firstAttribute="top" secondItem="DJD-In-pWu" secondAttribute="top" type="default" id="tCV-tE-Do4"/>
-                                            <constraint firstItem="rCE-cb-0q8" firstAttribute="bottom" secondItem="DJD-In-pWu" secondAttribute="bottom" type="default" id="xdA-WR-D3B"/>
-                                        </constraints>
                                         <connections>
                                             <outlet property="iconView" destination="DJD-In-pWu" id="TXN-gt-Wu7"/>
                                             <outlet property="nameLabel" destination="rCE-cb-0q8" id="TcJ-lV-Cf5"/>
@@ -113,10 +95,9 @@
                                     </tableViewCell>
                                 </prototypes>
                             </tableView>
-                            <button opaque="NO" contentMode="scaleToFill" contentHorizontalAlignment="center" contentVerticalAlignment="center" buttonType="roundedRect" lineBreakMode="middleTruncation" translatesAutoresizingMaskIntoConstraints="NO" id="HVn-J0-wnq">
-                                <constraints>
-                                    <constraint firstAttribute="width" constant="73" id="Nij-fb-lyE"/>
-                                </constraints>
+                            <button opaque="NO" contentMode="scaleToFill" contentHorizontalAlignment="center" contentVerticalAlignment="center" buttonType="roundedRect" lineBreakMode="middleTruncation" id="HVn-J0-wnq">
+                                <rect key="frame" x="124" y="56" width="73" height="44"/>
+                                <autoresizingMask key="autoresizingMask" flexibleMaxY="YES"/>
                                 <fontDescription key="fontDescription" type="boldSystem" pointSize="15"/>
                                 <state key="normal" title="Play">
                                     <color key="titleColor" red="0.19607843459999999" green="0.30980393290000002" blue="0.52156865600000002" alpha="1" colorSpace="calibratedRGB"/>
@@ -129,23 +110,8 @@
                                     <action selector="didTouchPlayButton:" destination="ilx-PK-F7i" eventType="touchUpInside" id="oyn-u4-h6D"/>
                                 </connections>
                             </button>
-                            <navigationBar contentMode="scaleToFill" translatesAutoresizingMaskIntoConstraints="NO" id="xIC-Dj-Ou8">
-                                <items>
-                                    <navigationItem title="Радиосу" id="ati-Qq-37O"/>
-                                </items>
-                            </navigationBar>
                         </subviews>
                         <color key="backgroundColor" white="1" alpha="1" colorSpace="custom" customColorSpace="calibratedWhite"/>
-                        <constraints>
-                            <constraint firstItem="gEg-SG-ozY" firstAttribute="bottom" secondItem="gEd-cF-MgZ" secondAttribute="bottom" type="default" id="5Ej-yp-B5f"/>
-                            <constraint firstItem="xIC-Dj-Ou8" firstAttribute="leading" secondItem="gEd-cF-MgZ" secondAttribute="leading" type="default" id="C46-rY-gMB"/>
-                            <constraint firstItem="xIC-Dj-Ou8" firstAttribute="top" secondItem="gEd-cF-MgZ" secondAttribute="top" type="default" id="Cfy-s2-GpY"/>
-                            <constraint firstItem="xIC-Dj-Ou8" firstAttribute="centerX" secondItem="HVn-J0-wnq" secondAttribute="centerX" type="default" id="Hge-NS-MWj"/>
-                            <constraint firstItem="gEg-SG-ozY" firstAttribute="trailing" secondItem="gEd-cF-MgZ" secondAttribute="trailing" type="default" id="JND-gO-NbI"/>
-                            <constraint firstItem="HVn-J0-wnq" firstAttribute="top" secondItem="gEd-cF-MgZ" secondAttribute="top" constant="56" id="YXC-UI-OOf"/>
-                            <constraint firstItem="gEg-SG-ozY" firstAttribute="leading" secondItem="gEd-cF-MgZ" secondAttribute="leading" type="default" id="ZSa-th-JXD"/>
-                            <constraint firstItem="xIC-Dj-Ou8" firstAttribute="trailing" secondItem="gEd-cF-MgZ" secondAttribute="trailing" type="default" id="uT1-5F-WdY"/>
-                        </constraints>
                     </view>
                     <connections>
                         <outlet property="playButton" destination="HVn-J0-wnq" id="yTZ-yj-frX"/>
@@ -154,7 +120,7 @@
                 </viewController>
                 <placeholder placeholderIdentifier="IBFirstResponder" id="V6V-0N-Qpr" userLabel="First Responder" sceneMemberID="firstResponder"/>
             </objects>
-            <point key="canvasLocation" x="916" y="-528"/>
+            <point key="canvasLocation" x="660" y="-516"/>
         </scene>
         <!--Radio Play View Controller-->
         <scene sceneID="Ld6-mo-mhd">
@@ -191,9 +157,6 @@
         </scene>
     </scenes>
     <classes>
-        <class className="NSLayoutConstraint" superclassName="NSObject">
-            <source key="sourceIdentifier" type="project" relativePath="./Classes/NSLayoutConstraint.h"/>
-        </class>
         <class className="RadioCell" superclassName="UITableViewCell">
             <source key="sourceIdentifier" type="project" relativePath="./Classes/RadioCell.h"/>
             <relationships>
