--- a/Radiosu/MainStoryboard.storyboard
+++ b/Radiosu/MainStoryboard.storyboard
@@ -65,7 +65,7 @@
                                 </items>
                             </navigationBar>
                             <tableView clipsSubviews="YES" contentMode="scaleToFill" alwaysBounceVertical="YES" dataMode="prototypes" style="plain" rowHeight="67" sectionHeaderHeight="22" sectionFooterHeight="22" id="gEg-SG-ozY">
-                                <rect key="frame" x="0.0" y="112" width="320" height="436"/>
+                                <rect key="frame" x="0.0" y="144" width="320" height="404"/>
                                 <autoresizingMask key="autoresizingMask" flexibleMaxY="YES"/>
                                 <color key="backgroundColor" white="1" alpha="1" colorSpace="calibratedWhite"/>
                                 <prototypes>
@@ -110,12 +110,20 @@
                                     <action selector="didTouchPlayButton:" destination="ilx-PK-F7i" eventType="touchUpInside" id="oyn-u4-h6D"/>
                                 </connections>
                             </button>
+                            <label opaque="NO" clipsSubviews="YES" userInteractionEnabled="NO" contentMode="left" text="" textAlignment="center" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" id="ISQ-1l-JS4">
+                                <rect key="frame" x="20" y="115" width="280" height="21"/>
+                                <autoresizingMask key="autoresizingMask" flexibleMaxX="YES" flexibleMaxY="YES"/>
+                                <fontDescription key="fontDescription" type="system" pointSize="17"/>
+                                <color key="textColor" cocoaTouchSystemColor="darkTextColor"/>
+                                <nil key="highlightedColor"/>
+                            </label>
                         </subviews>
                         <color key="backgroundColor" white="1" alpha="1" colorSpace="custom" customColorSpace="calibratedWhite"/>
                     </view>
                     <connections>
                         <outlet property="playButton" destination="HVn-J0-wnq" id="yTZ-yj-frX"/>
                         <outlet property="tableView" destination="gEg-SG-ozY" id="rKu-gQ-Y9i"/>
+                        <outlet property="titleLabel" destination="ISQ-1l-JS4" id="GHP-Pj-xx3"/>
                     </connections>
                 </viewController>
                 <placeholder placeholderIdentifier="IBFirstResponder" id="V6V-0N-Qpr" userLabel="First Responder" sceneMemberID="firstResponder"/>
@@ -171,6 +179,7 @@
                 <relationship kind="outlet" name="bar" candidateClass="UINavigationBar"/>
                 <relationship kind="outlet" name="playButton" candidateClass="UIButton"/>
                 <relationship kind="outlet" name="tableView" candidateClass="UITableView"/>
+                <relationship kind="outlet" name="titleLabel" candidateClass="UILabel"/>
             </relationships>
         </class>
     </classes>
